{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 107,
  "lineage": "7dd13570-18ae-5db9-5d69-52eaced8d09b",
  "resources": [
    {
      "module": "module.es_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch",
      "provider": "module.es_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:security-group/sg-0c4fa0da3b05ed69a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4fa0da3b05ed69a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "116722176476",
            "revoke_rules_on_delete": false,
            "tags": {
              "app": "fishtech",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:internet-gateway/igw-03dd88b7100273699",
            "id": "igw-03dd88b7100273699",
            "owner_id": "116722176476",
            "tags": {
              "Name": "fishtech"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03dd88b7100273699",
            "id": "r-rtb-06ca6f8a5faaf7b4b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ca6f8a5faaf7b4b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.prod_network.module.vpc.aws_internet_gateway.this",
            "module.prod_network.module.vpc.aws_route_table.public",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00227f260f3153b88",
            "owner_id": "116722176476",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fishtech-private-us-east-1a"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02a5bf3c71e59eb85",
            "owner_id": "116722176476",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fishtech-private-us-east-1b"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06ca6f8a5faaf7b4b",
            "owner_id": "116722176476",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dd88b7100273699",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fishtech-public"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4ed6d0428b652bf",
            "route_table_id": "rtb-00227f260f3153b88",
            "subnet_id": "subnet-0f9bc8dc491f5128b"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_route_table.private",
            "module.prod_network.module.vpc.aws_subnet.private",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0299dd0b902b82ee9",
            "route_table_id": "rtb-02a5bf3c71e59eb85",
            "subnet_id": "subnet-0f8bf2716df1f1b3d"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_route_table.private",
            "module.prod_network.module.vpc.aws_subnet.private",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a52fbcdb2e40b8d8",
            "route_table_id": "rtb-06ca6f8a5faaf7b4b",
            "subnet_id": "subnet-073d85525e98557a4"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_route_table.public",
            "module.prod_network.module.vpc.aws_subnet.public",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b776e586de7b6ea8",
            "route_table_id": "rtb-06ca6f8a5faaf7b4b",
            "subnet_id": "subnet-0a7f97dbe05b678f2"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_route_table.public",
            "module.prod_network.module.vpc.aws_subnet.public",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:subnet/subnet-0f9bc8dc491f5128b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f9bc8dc491f5128b",
            "map_public_ip_on_launch": false,
            "owner_id": "116722176476",
            "tags": {
              "Name": "fishtech-private-us-east-1a"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:subnet/subnet-0f8bf2716df1f1b3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f8bf2716df1f1b3d",
            "map_public_ip_on_launch": false,
            "owner_id": "116722176476",
            "tags": {
              "Name": "fishtech-private-us-east-1b"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:subnet/subnet-073d85525e98557a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-073d85525e98557a4",
            "map_public_ip_on_launch": true,
            "owner_id": "116722176476",
            "tags": {
              "Name": "fishtech-public-us-east-1a"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:subnet/subnet-0a7f97dbe05b678f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0a7f97dbe05b678f2",
            "map_public_ip_on_launch": true,
            "owner_id": "116722176476",
            "tags": {
              "Name": "fishtech-public-us-east-1b"
            },
            "vpc_id": "vpc-02424e206415b8182"
          },
          "dependencies": [
            "module.prod_network.data.aws_availability_zones.all",
            "module.prod_network.module.vpc.aws_vpc.this",
            "module.prod_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.prod_network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116722176476:vpc/vpc-02424e206415b8182",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ef24bf2631c2cb5",
            "default_route_table_id": "rtb-0dfa8df7add367f84",
            "default_security_group_id": "sg-07cecd967522ab5fa",
            "dhcp_options_id": "dopt-851474ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02424e206415b8182",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfa8df7add367f84",
            "owner_id": "116722176476",
            "tags": {
              "Name": "fishtech",
              "app": "fishtech",
              "env": "prod"
            }
          }
        }
      ]
    }
  ]
}